--- a/src/app/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokemon-card/pokemon-card.component.html
@@ -1,10 +1,9 @@
-<p>pokemon-card works!</p>
 
 <div class="pokemon-card">
 
     <div class="pokemon-card_ _image">
 
-    <img src="https://pokeres.bastionbot.org/images/pokemon/01.png" alt="">
+    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="pokemon image">
 
     </div>
 
@@ -15,6 +14,12 @@
 <div class="pokemon-card_ _name">
     Bulbasaur
 </div>
- 
 
+<div class="pokemon-card_ _type">
+
+<div class="pokemon-card_ _type pokemon-card_ _type--Grass">Grass</div>
+<div class="pokemon-card_ _type pokemon-card_ _type--Poison">Poison</div>
+
+</div>
+ 
 </div>
