--- a/src/app/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokemon-card/pokemon-card.component.html
@@ -1,25 +1,16 @@
+<div class="card" style="width: 18rem; display: inline-flex; margin-left: 30px;">
+  <h5 class="card-title">#001</h5>
+  <div>
+    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="pokemon image" class="card-img-top" alt="...">
 
-<div class="pokemon-card">
+    <div class="poke-nome">
+      <h3>Bulbasaur</h3>
 
-    <div class="pokemon-card_ _image">
-
-    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="pokemon image">
-
-    </div>
-
-<div class="pokemon-card_ _number">
-    Nº 001
+    <div class="poke-type">
+   
+  <div class="card-body">
+  </div>
+  </div>
 </div>
-
-<div class="pokemon-card_ _name">
-    Bulbasaur
 </div>
-
-<div class="pokemon-card_ _type">
-
-<div class="pokemon-card_ _type pokemon-card_ _type--Grass">Grass</div>
-<div class="pokemon-card_ _type pokemon-card_ _type--Poison">Poison</div>
-
-</div>
- 
 </div>
