--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -1,15 +1,10 @@
 <div class="card" style="width: 18rem; display: inline-flex; margin-left: 30px">
-  <h5 class="card-title">#001</h5>
+  <h5 class="card-title">{{ pokemon.id }}</h5>
   <div>
-    <img
-      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-      alt="pokemon image"
-      class="card-img-top"
-      alt="..."
-    />
+    <img [src]="pokemon.image" alt="pokemon image" class="card-img-top" />
 
     <div class="poke-nome">
-      <h3>Bulbasaur</h3>
+      <h3>{{ pokemon.name }}</h3>
 
       <div class="poke-type">
         <div class="card-body"></div>
