--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -1,4 +1,12 @@
-<div class="card" style="width: 18rem; display: inline-flex; margin-left: 30px">
+<div
+  class="card"
+  style="
+    width: 18rem;
+    display: inline-flex;
+    margin-left: 10px;
+    margin-bottom: 10px;
+  "
+>
   <h5 class="card-title">{{ pokemon.id }}</h5>
   <div>
     <img [src]="pokemon.image" alt="pokemon image" class="card-img-top" />
