--- a/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list.component.html
@@ -5,10 +5,8 @@
 
 <nav aria-label="Navegação de página exemplo">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="#">Anterior</a></li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Próximo</a></li>
+    <li class="page-item1"><a class="page-link" href="#">Anterior</a></li>
+
+    <li class="page-item2"><a class="page-link" href="#">Próximo</a></li>
   </ul>
 </nav>
